    - Also check updates for extensions when "check for updates" option is set. This option previously checked
      for Media Downloader updates only,
    - Check for extensions update and automatically download them if newer version are found when both
      "Show Version Info When Starting" and "check for updates" options are set.
    - Cancelling a download now also terminates ffmpeg or aria2c if they were started by the download.

  Version 2.9.0(March 2nd, 2023)
      [All]
    - Add Portuguese(Brazilian) translations.
    - Make entry table in the playlist tab larger after it is populated.
    - Required minimum version of yt-dlp is 2023.01.06.
    - Its now possible to cancel populating library tab.

  Version 3.0.0(April 1st, 2023)
      [Windows]
    - It is now possible for the app to update itself.
      [All]
    - yt-dlp now works as expected and it shows downloading media size instead of "NA".

  Version 3.1.0(April 4st, 2023)
      [All]
      - Add Dutch(Netherlands) translations.
      - Fix a bug that was caused by lux backend changing names of its binaries.

  Version 3.2.0(June 25th, 2023)
      [All]
      - Update to make it compatible with yt-dlp version 2023.06.22.

  Version 3.2.1(June 30th, 2023)
      [All]
      - Only show yt-dlp output we care about in the log window.
      [Non Windows]
      - Do not auto update media downloader because it works for windows only.

  Version 3.3.0(August 1st, 2023)
  [Windows]
      - Fix a problem that caused installed version to keep on updating updated version of Media Downloader and other engines.
      [All]
      - Update Chinese translations.
      - Update Russian translations.
      - Fix problems in basic downloader tab.
      - Various changes and improvements.

  Version 3.4.0(Unreleased)
      [All]
      - Add a config option to auto hide downloaded entries in batch and playlist downloader tabs.
      - Add ability to use system's proxy address.
      - Update translations.