@@ -207,4 +207,5 @@ Version 1.2.0(April 1st, 2021)
       [All]
       - Add a config option to auto hide downloaded entries in batch and playlist downloader tabs.
       - Add ability to use system's proxy address.
+      - Default to h264 video codec instead of yt-dlp's vp9 when downloading youtute videos.
       - Update translations.
